--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -24,7 +24,7 @@
                 <td> {{ listado[id] }} </td>
                 <td> <a href="/eliminar/{{id}}"><button class="btn btn-danger">Eliminar</button></a></td>
             </tr>
-            {% endofr %}
+            {% endfor %}
 
             <tr scope="row">
                 <form method="POST" action="/agregar">
